* Fixed evaluation loading if workspace has no users * Fixed evaluation selection visibility property

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/evaluation.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/evaluation.scss
@@ -86,7 +86,7 @@ body.evaluation {
         right:0;
         left:0;
         top:50px;
-        visible:hidden; 
+        visibility:hidden; 
         overflow:hidden;
         opacity:0;
         height:0px;
